2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b5

 * Change: Partly #1410186
   Renamed "rename album" to "Change foldername" as user got confused.
   Also removed this from startpage.
  
2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b4

 * CHANGE/NEW: #1543131

   The Subalbum tree in the classic theme is now a collapsable fading tree.
   Done via Yahoo! UI treeview.

   Modified printChildren()

2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b3

 * Fix: After the first succesfull install there is no $inst_type 
	in the config session.

2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b2

 * Fix: Missing $ in welcome.inc prevented showin an info message.

 * Fix: Check for multiple (not HTML compliant) IDs in gSubmit

2006-10-13 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b1

 * Added "featured photo block" from Beckett Madden-Woods.
   
   Splitted it into 2 files and made the frame configurable
   via config wizard.

   Config Version bump.

2006-10-12 Chris Kelly <ckdake@ckdake.com> 1.6-alpha1

 * Release: 1.6-alpha1

2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b27

 * Fix: Added two checks for existing $gallery.
	This causes to stop Gallery on the very first install.

2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b26

 * Fix: phpBB2 fixes. (Thanks to h0bbel)
    - Moving first HTML Output in albums view below the header

    - Rename $theme in albums.php to $g_theme to avoid conflict.

    - Added closing div and debug info into footer as phpBB2 exists earlier.

    - Updated Howto. Gallery 1.6 works also with phpBB 2.0.21

2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b25

 * Fix: #1487824, allow negative alignment for watermark.

2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b24

 * Fix: Missed some tablename changes in 1.6-svn-b7 
	for joomla! and mambo

 * Change: CSS changes to make popup headers and comments 
	   look nicer when embedded.

2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b23
